add: Header-based Authentication & Multiple Cookie Formats